<!--
  ~ Copyright (c) 2014 Jonathan Nelson
  ~ Released under the BSD license.  For details see the COPYING file.
  -->

<ScrollView
    android:id="@+id/scrollView2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideOverlay" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/section_background"
            android:padding="16dp"
            android:text="@string/pref_events_header"
            android:textColor="@color/section_text_color"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClickSilenceFreeTime"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_silence_free_time_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/silenceFreeTimeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/silenceFreeTimeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="false" />

        </RelativeLayout>

        <View style="@style/Divider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClickSilenceAllDay"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pref_silence_all_day_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/silenceAllDayDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/silenceAllDayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="false" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/section_background"
            android:padding="16dp"
            android:text="@string/pref_quick_silence_header"
            android:textColor="@color/section_text_color"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClickBufferMinutes"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_buffer_minutes_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/bufferMinutesDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View style="@style/Divider"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="onClickListDays"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_list_days_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lookaheadDaysDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View style="@style/Divider"/>

    </LinearLayout>

</ScrollView>