<!--
  ~ Copyright (c) 2014 Jonathan Nelson
  ~ Released under the BSD license.  For details see the COPYING file.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ciasaboark.tacere.activity.fragment.MainSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/eventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/section_background"
            android:padding="16dp"
            android:text="@string/pref_general_header"
            android:textColor="@color/section_text_color" />

        <RelativeLayout
            android:id="@+id/select_calendar_box"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="16dp">

            <ImageView
                android:id="@+id/calendar_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:paddingLeft="16dp" />

            <TextView
                android:id="@+id/calendar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/calendar_icon"
                android:paddingLeft="16dp"
                android:text="@string/select_calendars"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <View style="@style/Divider" />

        <RelativeLayout
            android:id="@+id/settings_ringerBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/settings_ringerIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginRight="16dp"
                android:background="@drawable/ic_state_silent"
                android:clickable="false"
                android:paddingLeft="16dp" />

            <TextView
                android:id="@+id/settings_ringerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/settings_ringerIcon"
                android:clickable="false"
                android:text="@string/pref_ringer_type_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/ringerTypeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_ringerTitle"
                android:layout_toRightOf="@+id/settings_ringerIcon"
                android:clickable="false"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </RelativeLayout>

        <View style="@style/Divider" />

        <RelativeLayout
            android:id="@+id/do_not_disturb_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="16dp">

            <Switch
                android:id="@+id/doNotDisturbSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/do_not_disturb_header"
                android:layout_centerVertical="true"
                android:checked="false"
                android:clickable="false" />

            <TextView
                android:id="@+id/do_not_disturb_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_do_not_disturb"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/section_background"
            android:padding="16dp"
            android:text="@string/pref_volumes_header"
            android:textColor="@color/section_text_color" />

        <RelativeLayout
            android:id="@+id/settings_mediaBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="16dp">

            <Switch
                android:id="@+id/adjustMediaCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="false" />

            <TextView
                android:id="@+id/settings_mediaText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_media_volume"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <View style="@style/Divider" />

        <RelativeLayout
            android:id="@+id/settings_alarmBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="16dp">

            <Switch
                android:id="@+id/adjustAlarmCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="false"
                android:layout_centerVertical="true"
                android:clickable="false" />

            <TextView
                android:id="@+id/settings_alarmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/pref_alarm_volume"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/section_background"
            android:padding="16dp"
            android:text="@string/pref_advance_header"
            android:textColor="@color/section_text_color" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_advanced_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_advanced_sub"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View style="@style/Divider" />

    </LinearLayout>

</FrameLayout>
